SubBt/force-app/main/default/objects/RFQ_Configuration__c/RFQ_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings used to configure the RFQ process.</description>
    <label>BT RFQ Configuration</label>
</CustomObject>