SubBt/force-app/main/default/objects/RFQ_Configuration__c/fields/Allow_To_Import_Item__c.field-meta.xml
<CustomField>
    <fullName>Allow_To_Import_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checked then user can import the item excel file</inlineHelpText>
    <label>Allow To Import Item</label>
    <type>Checkbox</type>
</CustomField>