SubBt/force-app/main/default/objects/RFQ_Configuration__c/fields/Allow_To_Select_Item_From_Budget__c.field-meta.xml
<CustomField>
    <fullName>Allow_To_Select_Item_From_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checked then user can select the RFQ Item from budget</inlineHelpText>
    <label>Allow To Select Item From Budget</label>
    <type>Checkbox</type>
</CustomField>