SubBt/force-app/main/default/objects/RFQ_Configuration__c/fields/Create_Contract_On__c.field-meta.xml
<CustomField>
    <fullName>Create_Contract_On__c</fullName>
    <inlineHelpText>When RFQ Status change to entered value at that time system will create the Sub contract</inlineHelpText>
    <label>Create Contract On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>